syntax = "proto3";
package proto;
option go_package = "github.com/joebui/go-blogging/user-mgmt-svc/pb";

service UserMgmt {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc VerifyJwt (VerifyJwtRequest) returns (VerifyJwtResponse) {}
}

message SignUpRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message SignInRequest {
  string email = 2;
  string password = 3;
}

message SignUpResponse {
  string token = 1;
  int32 expires_in = 2;
}

message SignInResponse {
  string token = 1;
  int32 expires_in = 2;
}

message VerifyJwtRequest {
  string token = 1;
}

message VerifyJwtResponse {
  string user_id = 1;
}
